--- a/demo/index.html
+++ b/demo/index.html
@@ -66,11 +66,84 @@
             background-color: #f2f3fb;
         }
 
+        .modal-content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .modal-content__heading {
+            margin: 0 0 20px;
+            text-align: center;
+            font-weight: 700;
+            font-size: 18px;
+            line-height: 1.4;
+            text-transform: uppercase;
+        }
+
+        .modal-content__text {
+            margin: 0;
+            text-align: center;
+            font-size: 14px;
+            line-height: 1.4;
+        }
+
+        .modal-content__text:not(:last-of-type) {
+            margin-bottom: 15px;
+        }
+
+        .modal-content__button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 45px;
+            margin-top: 20px;
+            padding: 0 20px;
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 1.4;
+            color: #fff;
+            background-color: green;
+            border-radius: 6px;
+            border: none;
+            transition: background-color .3s ease-in-out;
+            cursor: pointer;
+        }
+
+        .modal-content__button:hover,
+        .modal-content__button:focus {
+            background-color: darkgreen;
+            outline: none;
+        }
+
+        .aa-modal__body--alt {
+            background-image: linear-gradient(-45deg, rgba(255,255,0,.1) 0%, rgba(0,255,255,.1) 100%);
+            border: 4px solid #393939;
+            box-shadow: 0 5px 10px rgba(0,0,0,.3);
+        }
+
         @media (min-width: 768px) {
             .aa-modal-demo__btn {
                 font-size: 18px;
             }
-        }
+
+            .modal-content__heading {
+                margin-bottom: 30px;
+                font-size: 21px;
+            }
+
+            .modal-content__text,
+            .modal-content__button {
+                font-size: 16px;
+            }
+
+            .modal-content__text:not(:last-of-type) {
+                margin-bottom: 20px;
+            }
+
+            .modal-content__button {
+                margin-top: 30px;
+            }
     </style>
 </head>
 <body>
