implementing modal closing; preloader transitions; modifying and expanding on event handlers

--- a/demo/ajax/modal-3.html
+++ b/demo/ajax/modal-3.html
@@ -1,5 +1,5 @@
 <div class="modal-content">
     <h2 class="modal-content__heading">Modal with alternative options set</h2>
-    <p class="modal-content__text">This is a modal window that was created using non-default options</p>
+    <p class="modal-content__text">This is a <a href="https://github.com/schegol/aa-modal" target="_blank">modal window</a> that was created using non-default options</p>
     <button class="modal-content__button">OK</button>
 </div>
