--- a/demo/index.html
+++ b/demo/index.html
@@ -92,6 +92,18 @@
             margin-bottom: 15px;
         }
 
+        .modal-content__text a {
+            color: green;
+            text-decoration: none;
+            transition: color .3s ease-in-out;
+        }
+
+        .modal-content__text a:hover,
+        .modal-content__text a:focus {
+            color: darkgreen;
+            outline: none;
+        }
+
         .modal-content__button {
             display: flex;
             justify-content: center;
